Tweaked fast open textbox height and spacing - Bug #97572 r=marky
(integrated from komodo (trunk) change 77204 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11886 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/modules/fastopen/skin/gotofile.less
+++ b/src/modules/fastopen/skin/gotofile.less
@@ -4,6 +4,7 @@
 
 /* Spinning busy throbber. */
 .throbber {
+    visibility: collapse;
     list-style-image: none;
     width: 16px;
     height: 16px;
@@ -16,15 +17,14 @@
 }
 
 .throbber[busy="true"] {
+    visibility: visible;
     list-style-image: url("chrome://global/skin/icons/loading_16.png");
 }
 
 toolbarbutton {
     -moz-appearance: none;
-    min-width: 24px;
-    height: 24px;
-    max-height: 24px;
-    padding: 0 5px;
+    margin-left: 5px;
+    max-width: 16px;
 }
 
 #shortcut-show {
@@ -34,8 +34,7 @@ toolbarbutton {
     padding: 0.2em;
 }
 #shortcut-panel > toolbarbutton {
-    width: 16px;
-    height: 16px;
+    max-width: 16px;
 }
 #shortcut-textbox {
     min-width: 20em;
